syntax = "proto3";

package user;

service UserService {

  // 创建用户
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

  // 获取用户
  rpc GetUser (GetUserRequest) returns (GetUserResponse);

  // 更新用户信息
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
}

message CreateUserResponse {
  int32 user_id = 1;
  string message = 2;
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  string username = 1;
  string email = 2;
}

message UpdateUserRequest {
  int32 user_id = 1;
  string new_username = 2;
  string new_email = 3;
}

message UpdateUserResponse {
  string message = 1;
}
